--- a/src/App.css
+++ b/src/App.css
@@ -148,6 +148,11 @@
     transform: scale(1);
     opacity: 1;
   }
+
+  100% {
+    transform: scale(1);
+    opacity: 1;
+  }
 }
 
 .winner-label {
